--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <script src='https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCamssHcPQDVzMG0llLiCNVurY4hTuYYZg'></script>
+  <script src='https://maps.googleapis.com/maps/api/js?libraries=places&key=<YOUR API KEY>'></script>
 </head>
 
 <body>
